# observability-agent

./: .gitignore  Makefile  README.md  code-search-mcp-plan.md  docker-compose.yml  generate-error-traffic.sh  generate-success-traffic.sh  generate-traffic.sh  mcp-client-plan.md  mcp-client-progress.md  plan.md  pom.xml  presentation.excalidraw  presentation.md  progress.md
catalog-service/: Dockerfile  pom.xml
code-search/: .dockerignore  .env.example  Dockerfile  config.yaml  progress.md  pyproject.toml
inventory-service/: Dockerfile  pom.xml
observability/: otel-collector-config.yml  tempo.yml
observability-chat/: .dockerignore  .env.example  Dockerfile  Makefile  pyproject.toml
observability-chat/backend/: config.py  main.py
observability-chat/backend/agent/: conversation.py  loop.py  system_prompt.py  tool_bridge.py
observability-chat/backend/agent/providers/: anthropic.py  openai.py
observability-chat/backend/api/: chat.py  health.py  mcp_routes.py
observability-chat/backend/mcp/: manager.py
observability-chat/frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
observability-chat/frontend/src/: types.ts
observability-chat/frontend/src/components/: ChatInput.tsx  ChatWindow.tsx  MessageBubble.tsx  MessageList.tsx  StatusBar.tsx  ToolCallCard.tsx
observability-chat/frontend/src/hooks/: useChat.ts
observability-chat/frontend/src/styles/: globals.css
observability-config/: init-databases.sql  loki-config.yml  otel-collector-config.yml  tempo.yml
order-service/: Dockerfile  pom.xml
(+62 files in other folders)
