[project]
name = "observability-chat"
version = "0.1.0"
description = "AI-powered chat agent for querying coffee-shop observability data via MCP"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "openai>=1.60.0",
    "mcp>=1.5.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
